Update 04-Java-Garbage-Collectors.md